--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="txt_text_belt_message">$OTP is your verification code for SOS - Guardian App.</string>
     <string name="txt_phone_number_format">%s%s</string>
     <string name="txt_something_went_wrong">Oops, something went wrong, try it again!</string>
+    <string name="txt_enter_digit_code">Enter the 6-digit code that we sent to</string>
+    <string name="txt_continue">Continue</string>
+    <string name="txt_wrong_code">Wrong code.Try again.</string>
 </resources>
