--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="txt_wrong_code">Wrong code.Try again.</string>
     <string name="txt_user_phone_number">+%s</string>
     <string name="txt_phone_number_automatically_verified">Phone number automatically verified</string>
+    <string name="txt_number_six_digit_code">%s%s%s%s%s%s</string>
 </resources>
